[package]
name = "streamlet"
version = "0.1.0"
authors = ["Noah Golub <noah@findora.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.5"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
serde_derive = "^1.0.59"
serde_json = "1.0"
serde = { version = "1.0.99", features = ["derive"] }
sha2 = "0.8.0"
snafu = { version = "0.6.8", features = ["backtraces"] }


